[package]
name = "netps-trojan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netps-core.workspace = true
thiserror = "1.0.50"
sha2 = "0.10.8"
hex = "0.4.3"

[dev-dependencies]
hyper = { version = "0.14.27", features = ["client", "http1"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "time"] }
tokio-native-tls = { version = "0.3.1" , features = ["vendored"] }
